refactor: clean up unused imports, fields, and modernize Locale instantiation